x11proto-input (2.0.2-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 09 Jun 2011 15:09:41 +0200

x11proto-input (2.0.1-1) unstable; urgency=low

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Remove myself from Uploaders

  [ Cyril Brulebois ]
  * New upstream release.
  * Update debian/copyright.
  * No longer pass --disable-shared, this option is gone.
  * Ship XIproto.txt and XI2proto.txt
  * Switch from --list-missing to --fail-missing for additional safety.
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 12 Nov 2010 17:08:10 +0100

x11proto-input (2.0-2) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Wed, 06 Jan 2010 12:30:54 +0000

x11proto-input (2.0-1) experimental; urgency=low

  [ Julien Cristau ]
  * Add Depends on x11proto-core-dev.
  * Install the XI1 and XI2 specs in the package.

  [ Timo Aaltonen ]
  * New upstream release.
  * Bump the build-dep on xutils-dev (>= 1:7.5~1).

 -- Julien Cristau <jcristau@debian.org>  Thu, 26 Nov 2009 15:34:18 +0100

x11proto-input (1.9.99.902-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * Add README.source from xsfbs. Bump Standards-Version to 3.8.1.

  [ Julien Cristau ]
  * Drop Pre-Depends on x11-common and Conflicts/Replaces on libxi-dev.  This
    was only needed for upgrades from sarge.
  * Bump Standards-Version to 3.8.3.
  * New upstream release candidate
    + XInput.h moved to libXi
  * Breaks libxi-dev << 1.2.99 to make sure XInput.h doesn't go missing.
  * Bump xutils-dev build-dep to 1:7.4+4.

 -- Julien Cristau <jcristau@debian.org>  Sat, 12 Sep 2009 14:52:31 +0200

x11proto-input (1.5.0-2) unstable; urgency=low

  * Pull from upstream: Protect _XiDevicePresenceNotifyEvent declaration
    against C++ includes.
  * Upload to unstable.
