@@ -1,6 +1,10 @@
 x11proto-input (2.0.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Switch to dh:
+    - Bump debhelper build-dep and compat to 8.
+    - Use dh-autoreconf and quilt sequences, rewrite rules file.
+    - Add placeholder quilt series file.
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 09 Jun 2011 15:09:41 +0200
 
